fix(oauth): 要素選択の一致を経路差に依存させない / 選択を剪定しない (#1816)
PR レビュー対応。

**要素の一致がデシリアライズ経路に依存していた**

narrow() は要素を equals で突き合わせるが、比較の両辺は経路が違う。選択は
認可するリクエストでは web 層のパース結果として届き、それ以降はセンチネル
から復元される。一方、突き合わせ先のプロパティは常にリポジトリから
JsonConverter を通って来る。数値の写像が食い違えば（Integer と Long など）
オブジェクト要素が不一致になり、ユーザーが選んだ要素が黙って落ちる。
fromObject の時点で JsonConverter を通して正規化し、両辺を1つの写像に
揃える。Long で投げても Integer 保有と一致することをテストで固定した。

**選択の剪定が出力を広げていた**

denied_claims でクレーム名を拒否したとき、その選択も落としていた。しかし
カスタムクレームを解放するのはグラントの claims:* スコープであり、3つの
ScopeMappingCustomClaimsCreator はいずれもクレーム名を参照しない。つまり
denied_claims はカスタムクレームを止めず、選択だけが消えるため narrowing が
外れて全要素が解放される。「絞れ」という指示で出力が広がる形だった。

narrow() は減らす方向にしか働かないので、解放されないクレームの選択を抱えて
いても無害である一方、落とすと出力が広がる。剪定そのものを削除した。
Javadoc の「denied_claims が all-or-nothing を表す」も実装と食い違って
いたため、denied_scopes が claims:* スコープを落とすのが担当だと直した。

**同意画面が選択を常に送るようにした**

従来は1つ以上拒否したときだけ granted_claim_values を送っていた。省略と
全要素送信は現状どちらも同じ結果になるが、キーの不在から意図を推測させる形
だったため、画面が見せたものをそのまま送るようにした。

その他: OpenAPI に granted_claim_values / claim_values を追記、旧設計のまま
だったコメントを修正、null 要素で 500 にならないことをテストで固定。

E2E: denied_claims とクレーム値選択の併用、再同意で選択が引き継がれないこと
（各認可が自分の同意を運ぶ設計の明示）を追加して 11 件。
usecase 231件 / spec 626件 / integration/ida 128件でリグレッションなし。

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>